--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@commitlint/config-conventional": "^18.4.4",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
+    "husky": "^8.0.3",
     "prettier": "^3.1.1"
   },
   "private": true
