chore: change `lint:fix` script to `format` usign prettier for formatting
Update lint:fix script in package.json to format that utilize prettier
for code formatting during the linting process.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "eslint . --max-warnings=0",
-    "lint:fix": "eslint --fix .",
+    "format": "prettier --write .",
     "prepare": "husky install"
   },
   "dependencies": {
