--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,7 +26,8 @@
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
     "husky": "^8.0.3",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "private": true
 }
