--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~49.0.15",
     "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11", 
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-svg": "^14.1.0"
@@ -27,7 +28,8 @@
     "eslint-config-universe": "^12.0.0",
     "husky": "^8.0.3",
     "prettier": "^3.1.1",
-    "react-native-svg-transformer": "^1.3.0"
+    "react-native-svg-transformer": "^1.3.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
