--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nativewind": "^2.0.11", 
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
