--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
-    "nativewind": "^2.0.11", 
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-svg": "^14.1.0",
-    "@types/react": "~18.2.14"
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,6 +29,7 @@
     "eslint-config-universe": "^12.0.0",
     "husky": "^8.0.3",
     "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react-native-svg-transformer": "^1.3.0",
     "tailwindcss": "3.3.2"
   },
