--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "expo-router": "^2.0.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "expo-linking": "~5.0.2",
+    "expo-constants": "~14.4.2",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
