--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "reapp-frontend",
     "slug": "reapp-frontend",
+    "scheme": "reapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
