--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reapp-frontend",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -39,5 +39,8 @@
     "react-native-svg-transformer": "^1.3.0",
     "tailwindcss": "3.3.2"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "react-refresh": "~0.14.0"
+  }
 }
