--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   "dependencies": {
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
     "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-svg": "^14.1.0",
-    "expo-router": "^2.0.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-linking": "~5.0.2",
-    "expo-constants": "~14.4.2",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
