--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-navigation/stack": "^6.3.21",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
