--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/stack": "^6.3.21",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
@@ -28,7 +29,9 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^14.1.0",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "react-native-tab-view": "^3.5.2",
+    "react-native-pager-view": "6.2.0",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
