--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/stack": "^6.3.21",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
@@ -27,8 +29,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
