--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/stack": "^6.3.21",
     "@types/react": "~18.2.14",
+    "date-fns": "^3.3.1",
     "expo": "~49.0.15",
     "expo-av": "~13.4.1",
     "expo-constants": "~14.4.2",
@@ -32,7 +33,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^14.1.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "expo-image": "~1.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
