--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~49.0.15",
     "expo-av": "~13.4.1",
     "expo-constants": "~14.4.2",
+    "expo-image": "~1.3.5",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "^0.22.0",
@@ -27,14 +28,14 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "^1.10.3",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^14.1.0",
-    "react-native-tab-view": "^3.5.2",
-    "expo-image": "~1.3.5"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
