--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/drawer": "^6.6.11",
     "@react-navigation/material-top-tabs": "^6.6.10",
@@ -27,10 +28,15 @@
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "install": "^0.13.0",
     "nativewind": "^2.0.11",
+    "npm": "^10.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
@@ -38,7 +44,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-maps": "1.10.0"
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
