--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "^13.0.3",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "npm": "^10.6.0",
