--- a/app.json
+++ b/app.json
@@ -25,6 +25,16 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"]
+    "plugins": [
+      "expo-router",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow Reapp to access your camera",
+          "microphonePermission": "Allow Reapp to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ]
+    ]
   }
 }
