--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
-    "zod": "^3.23.4"
+    "zod": "^3.23.4",
+    "expo-camera": "~14.1.3",
+    "expo-barcode-scanner": "~12.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
