--- a/package.json
+++ b/package.json
@@ -13,45 +13,45 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.6.11",
     "@react-navigation/material-top-tabs": "^6.6.10",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.21",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.79",
     "axios": "^1.6.8",
     "date-fns": "^3.3.1",
-    "expo": "^50.0.13",
-    "expo-av": "~13.10.5",
-    "expo-constants": "~15.4.5",
-    "expo-image": "~1.10.6",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.18",
+    "expo-av": "~14.0.6",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.13",
+    "expo-constants": "~16.0.2",
+    "expo-image": "~1.12.12",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.17",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "npm": "^10.6.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.73.4",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "1.10.0",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-modalize": "^2.1.1",
-    "react-native-pager-view": "6.2.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
-    "zod": "^3.23.4",
-    "expo-camera": "~14.1.3",
-    "expo-barcode-scanner": "~12.9.3"
+    "zod": "^3.23.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
     "@faker-js/faker": "^8.4.1",
