--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
-    "@react-native-picker/picker": "2.6.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.6.11",
     "@react-navigation/material-top-tabs": "^6.6.10",
     "@react-navigation/native": "^6.1.16",
@@ -24,36 +24,35 @@
     "axios": "^1.6.8",
     "core-js": "^3.37.1",
     "date-fns": "^3.6.0",
-    "expo": "^50.0.13",
-    "expo-av": "~13.10.5",
-    "expo-barcode-scanner": "~12.9.3",
-    "expo-camera": "~14.1.3",
-    "expo-constants": "~15.4.5",
-    "expo-image": "~1.10.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^51.0.0",
+    "expo-av": "~14.0.7",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.16",
+    "expo-constants": "~16.0.2",
+    "expo-image": "~1.13.0",
+    "expo-image-picker": "~15.0.7",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.24",
+    "expo-splash-screen": "~0.27.7",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
-    "npm": "^10.6.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "1.14.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-modalize": "^2.1.1",
-    "react-native-pager-view": "6.2.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "zod": "^3.23.4"
   },
