--- a/package.json
+++ b/package.json
@@ -12,46 +12,48 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.0",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-google-signin/google-signin": "^12.2.1",
-    "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/drawer": "^6.6.11",
-    "@react-navigation/material-top-tabs": "^6.6.10",
-    "@react-navigation/native": "^6.1.16",
-    "@react-navigation/stack": "^6.3.21",
-    "@types/react": "~18.2.14",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/drawer": "^7.0.19",
+    "@react-navigation/material-top-tabs": "^7.0.18",
+    "@types/react": "~18.3.12",
+    "add": "^2.0.6",
     "axios": "^1.6.8",
     "core-js": "^3.37.1",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.0",
-    "expo-av": "~14.0.7",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-image": "~1.13.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.24",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.17",
+    "expo-av": "~15.0.1",
+    "expo-camera": "~16.0.9",
+    "expo-constants": "~17.0.3",
+    "expo-image": "~2.0.3",
+    "expo-image-picker": "~16.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.11",
+    "expo-splash-screen": "~0.29.16",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "^4.0.5",
+    "expo-web-browser": "~14.0.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
+    "npm": "^10.9.2",
+    "react": "18.3.1",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-maps": "1.14.0",
+    "react-native-maps": "1.18.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-modalize": "^2.1.1",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
     "zod": "^3.23.4"
   },
