--- a/package.json
+++ b/package.json
@@ -17,24 +17,24 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/drawer": "^7.0.19",
+    "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/material-top-tabs": "^7.0.18",
     "@types/react": "~18.3.12",
     "add": "^2.0.6",
     "axios": "^1.6.8",
     "core-js": "^3.37.1",
     "date-fns": "^3.6.0",
-    "expo": "^52.0.17",
+    "expo": "~52.0.20",
     "expo-av": "~15.0.1",
-    "expo-camera": "~16.0.9",
+    "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.11",
-    "expo-splash-screen": "~0.29.16",
+    "expo-router": "~4.0.15",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "^4.0.5",
+    "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
@@ -42,7 +42,7 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "1.18.0",
@@ -51,7 +51,7 @@
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
     "zod": "^3.23.4"
