--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "18.3.1",
     "react-hook-form": "^7.51.3",
     "react-native": "0.76.5",
+    "react-native-currency-input": "^1.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "1.18.0",
