--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
-    "zod": "^3.23.4"
+    "zod": "^3.23.4",
+    "expo-font": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
