--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "18.3.1",
     "react-hook-form": "^7.51.3",
     "react-native": "0.76.5",
+    "react-native-blob-util": "^0.21.2",
     "react-native-currency-input": "^1.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
@@ -52,11 +53,13 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.5.1",
+    "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-webview": "^13.13.2",
     "zod": "^3.23.4"
   },
   "devDependencies": {
