--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint . --max-warnings=0",
-    "format": "prettier --write .",
+    "lint": "biome lint --write src/",
+    "format": "biome format --write src/",
     "prepare": "husky install"
   },
   "dependencies": {
