--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/material-top-tabs": "^7.0.18",
+    "@tanstack/react-query": "^5.75.1",
     "@types/react": "~18.3.12",
     "add": "^2.0.6",
     "axios": "^1.6.8",
