--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "^13.13.2",
-    "zod": "^3.23.4"
+    "zod": "^3.23.4",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
