--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/material-top-tabs": "^7.0.18",
     "@tanstack/react-query": "^5.75.1",
-    "@types/react": "~18.3.12",
     "add": "^2.0.6",
     "axios": "^1.6.8",
     "core-js": "^3.37.1",
@@ -45,7 +44,7 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-blob-util": "^0.21.2",
     "react-native-currency-input": "^1.1.1",
     "react-native-gesture-handler": "~2.20.2",
@@ -60,7 +59,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-webview": "^13.13.2",
+    "react-native-webview": "13.12.5",
     "zod": "^3.23.4",
     "zustand": "^5.0.4"
   },
@@ -70,9 +69,12 @@
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
     "@faker-js/faker": "^8.4.1",
+    "@types/react": "~18.3.12",
     "husky": "^8.0.3",
     "react-native-svg-transformer": "^1.3.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
 }
