--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-av": "~15.0.1",
     "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.3",
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.3",
