--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "name": "Reapp",
     "slug": "reapp",
     "scheme": "reapp",
-    "version": "1.2.6-alpha",
+    "version": "1.3.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -13,9 +13,7 @@
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.coperativadigital.reaap",
