--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.5.1",
     "zod": "^3.23.4",
     "zustand": "^5.0.4"
   },
