--- a/package.json
+++ b/package.json
@@ -14,53 +14,57 @@
   "dependencies": {
     "@babel/runtime": "^7.26.0",
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/metro-runtime": "~6.1.2",
     "@hookform/resolvers": "^3.3.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/drawer": "^7.0.0",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/material-top-tabs": "^7.0.18",
+    "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.75.1",
     "add": "^2.0.6",
     "axios": "^1.6.8",
     "core-js": "^3.37.1",
     "date-fns": "^3.6.0",
-    "expo": "~52.0.20",
-    "expo-av": "~15.0.1",
-    "expo-camera": "~16.0.10",
-    "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.20",
-    "expo-font": "~13.0.3",
-    "expo-image": "~2.0.3",
-    "expo-image-picker": "~16.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo": "^54.0.9",
+    "expo-av": "~16.0.7",
+    "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.12",
+    "expo-font": "~14.0.8",
+    "expo-image": "~3.0.8",
+    "expo-image-picker": "~17.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.7",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
-    "react": "18.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.76.9",
+    "react-native": "0.81.4",
     "react-native-blob-util": "^0.21.2",
     "react-native-currency-input": "^1.1.1",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "1.20.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-modalize": "^2.1.1",
-    "react-native-pager-view": "6.5.1",
+    "react-native-pager-view": "6.9.1",
     "react-native-pdf": "^6.7.7",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.5.1",
     "zod": "^3.23.4",
     "zustand": "^5.0.4"
   },
@@ -70,11 +74,12 @@
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
     "@faker-js/faker": "^8.4.1",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.10",
+    "@types/react-dom": "^19",
     "husky": "^8.0.3",
     "react-native-svg-transformer": "^1.3.0",
     "tailwindcss": "3.3.2",
-    "typescript": "^5.3.3"
+    "typescript": "~5.9.2"
   },
   "private": true,
   "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
