--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/material-top-tabs": "^7.0.18",
     "@react-navigation/native": "^7.1.8",
+    "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "^5.75.1",
     "add": "^2.0.6",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "core-js": "^3.37.1",
     "date-fns": "^3.6.0",
     "expo": "^54.0.9",
@@ -44,7 +48,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "nativewind": "^2.0.11",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.51.3",
@@ -59,12 +63,14 @@
     "react-native-pager-view": "6.9.1",
     "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "^4.1.0",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.4",
     "zustand": "^5.0.4"
   },
@@ -78,7 +84,7 @@
     "@types/react-dom": "^19",
     "husky": "^8.0.3",
     "react-native-svg-transformer": "^1.3.0",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
   "private": true,
