--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react-native-pager-view": "6.9.1",
     "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "^4.1.0",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^3.5.2",
