feat: add Alert, Icon, Input, and Label components with styles

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/material-top-tabs": "^7.0.18",
     "@react-navigation/native": "^7.1.8",
     "@rn-primitives/avatar": "^1.2.0",
+    "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "^5.75.1",
@@ -49,6 +50,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react-native": "^0.544.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
