--- a/package.json
+++ b/package.json
@@ -65,13 +65,13 @@
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.9.1",
     "react-native-pdf": "^6.7.7",
-    "react-native-reanimated": "^4.1.0",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.5.1",
+    "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.4",
