--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reapp-frontend",
-  "version": "0.2.1-alpha",
+  "version": "1.3.1",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
