--- a/app.json
+++ b/app.json
@@ -31,9 +31,6 @@
       "package": "com.coperativadigital.reapp",
       "googleServicesFile": "./google-services.json"
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
     "plugins": [
       "expo-router",
       [
@@ -56,7 +53,8 @@
           "photosPermission": "Permitir que Reapp acesse suas fotos"
         }
       ],
-      "expo-font"
+      "expo-font",
+      "expo-web-browser"
     ],
     "extra": {
       "router": {
