--- a/package.json
+++ b/package.json
@@ -23,32 +23,28 @@
     "@react-navigation/material-top-tabs": "^7.0.18",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.75.1",
-    "add": "^2.0.6",
     "axios": "^1.6.8",
-    "core-js": "^3.37.1",
     "date-fns": "^3.6.0",
-    "expo": "^54.0.9",
+    "expo": "54.0.20",
     "expo-av": "~16.0.7",
     "expo-camera": "~17.0.8",
-    "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.12",
-    "expo-font": "~14.0.8",
-    "expo-image": "~3.0.8",
+    "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.16",
+    "expo-font": "~14.0.9",
+    "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.7",
+    "expo-router": "~6.0.13",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
-    "install": "^0.13.0",
-    "jsonwebtoken": "^9.0.2",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.8",
     "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-blob-util": "^0.21.2",
     "react-native-currency-input": "^1.1.1",
     "react-native-gesture-handler": "~2.28.0",
@@ -58,7 +54,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.9.1",
     "react-native-pdf": "^6.7.7",
-    "react-native-reanimated": "^4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
@@ -75,7 +71,7 @@
     "@commitlint/config-conventional": "^18.4.4",
     "@faker-js/faker": "^8.4.1",
     "@types/react": "~19.1.10",
-    "@types/react-dom": "^19",
+    "@types/react-dom": "~19.1.7",
     "husky": "^8.0.3",
     "react-native-svg-transformer": "^1.3.0",
     "tailwindcss": "3.3.2",
