--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/material-top-tabs": "^7.0.18",
     "@react-navigation/native": "^7.1.8",
+    "@rn-primitives/portal": "^1.3.0",
     "@tanstack/react-query": "^5.75.1",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "expo": "54.0.20",
     "expo-av": "~16.0.7",
@@ -61,6 +64,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.4",
     "zustand": "^5.0.4"
   },
