--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/material-top-tabs": "^7.0.18",
     "@react-navigation/native": "^7.1.8",
     "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "^5.75.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.1",
@@ -43,6 +44,7 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
     "jwt-decode": "^4.0.0",
+    "lucide-react-native": "^0.555.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
