--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/material-top-tabs": "^7.0.18",
     "@react-navigation/native": "^7.1.8",
     "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "^5.75.1",
     "axios": "^1.6.8",
