--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "es-toolkit": "^1.42.0",
     "expo": "54.0.20",
     "expo-av": "~16.0.7",
     "expo-camera": "~17.0.8",
